apps/emby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:emby.lab.emc2.build
    traefik.port: '8096'
  labels:
    app: emby
  name: emby
  namespace: media
spec:
  selector:
    matchLabels:
      app: emby
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:emby.lab.emc2.build
        traefik.port: '8096'
      labels:
        app: emby
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: lscr.io/linuxserver/emby:latest
        imagePullPolicy: IfNotPresent
        name: emby
        ports:
        - containerPort: 8096
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "4"
            memory: 2Gi
        volumeMounts:
        - mountPath: /config
          name: emby-config
        - mountPath: /media
          name: media-library
      hostname: emby
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: emby-config
        persistentVolumeClaim:
          claimName: emby-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
