apps/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  ports:
  - name: emby
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: emby
